# TREX

./: .gitignore  CMakeLists.txt  README.md
src/: ChannelChemicalDeposition.c  ChannelChemicalDispersion.c  ChannelChemicalErosion.c  ChannelChemicalHydrolysis.c  ChannelChemicalOxidation.c  ChannelChemicalPartitioning.c  ChannelChemicalRadioactive.c  ChannelChemicalTransmissionLoss-r2.c  ChannelChemicalUDReaction.c  ChannelChemicalVolatilization.c  ChannelChemicalYield.c  ChannelSolidsAdvection-r2.c  ChannelSolidsConcentration-r3.c  ChannelSolidsDispersion.c  ChannelSolidsErosion.c  ChannelSolidsMineralization.c  ChannelSolidsYield.c  ChannelWaterRoute-r10.c  ChemicalBalance.c  ChemicalPropertyInit.c  ComputeChannelLength.c  ComputeChannelTopology-r5.c  ComputeChemicalGroupConcSums-r2.c  ComputeChemicalGroupTransportSums.c  ComputeFinalState.c  ComputeFinalStateChemical.c  ComputeInitialState.c  ComputeInitialStateSolids.c  ComputeInitialStateWater.c  ComputeSolidsGroupConcSums.c  FreeMemoryChemical.c  FreeMemorySolids.c  Grid-r2.c  InitializeEnvironment.c  InitializeWater-r7.c  Makefile.gcc  Makefile.intel  Makefile.intel.static  Makefile.pgi  NewStateChemical.c  (+94 more)
trex_src/src/: CMakeLists.txt  ChannelChemicalAdvection-r2.c  ChannelChemicalBiodegradation.c  ChannelChemicalConcentration-r3.c  ChannelChemicalDissolution.c  ChannelChemicalKinetics.c  ChannelChemicalPhotolysis.c  ChannelSolidsDeposition.c  ChannelSolidsErosion.c  ChannelSolidsKinetics.c  ChannelSolidsTransportCapacity-r2.c  ChannelWaterDepth-r9.c  ChemicalTransport.c  ComputeChannelElevation.c  ComputeChemicalGroupPhaseAve.c  ComputeFinalStateSolids.c  ComputeFinalStateWater.c  ComputeInitialStateChemical.c  ComputeSolarRadiation.c  ComputeSolidsGroupTransportSums.c  FloodplainChemicalTransfer.c  FloodplainSolidsTransfer.c  FloodplainWaterTransfer-r2.c  FreeMemory.c  FreeMemoryEnvironment.c  FreeMemorySolids.c  FreeMemoryWater-r3.c  Infiltration-r5.c  Initialize-r2.c  InitializeChemical-r2.c  InitializeSolids-r3.c  InitializeSolids-r4.c  Interception-r4.c  Makefile.gcc  Makefile.intel.static  NewState.c  NewStateStack.c  OverlandChemicalBiodegradation.c  OverlandChemicalDeposition.c  OverlandChemicalDispersion.c  (+76 more)
